<resources>
    <string name="app_name" translatable="false">openScale</string>
    <string name="title_overview">Overview</string>
    <string name="title_graph">Chart</string>
    <string name="title_table">Table</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_users">Users</string>
    <string name="title_measurements">Measurements</string>
    <string name="title_about">About</string>
    <string name="title_general">General</string>
    <string name="action_settings">Settings</string>
    <string name="action_bluetooth_status">Bluetooth Status</string>
    <string name="action_donation">Donation</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_delete">Delete</string>
    <string name="label_empty">empty</string>
    <string name="label_add_user">Add user</string>
    <string name="label_add_measurement">Add measurement</string>
    <string name="label_share">Share</string>
    <string name="label_share_subject">openScale data export (%s)</string>
    <string name="label_weight">Weight</string>
    <string name="label_bmi">Body mass index (BMI)</string>
    <string name="label_bmr">Basal metabolic rate (BMR)</string>
    <string name="label_tdee">Total daily energy expenditure (TDEE)</string>
    <string name="label_fat">Body fat</string>
    <string name="label_water">Total body water</string>
    <string name="label_muscle">Muscle</string>
    <string name="label_lbm">Lean body mass</string>
    <string name="label_waist">Waist circumference</string>
    <string name="label_hip">Hip circumference</string>
    <string name="label_comment">Comment</string>
    <string name="label_whtr">Waist-to-height ratio</string>
    <string name="label_whr">Waist-hip ratio</string>
    <string name="label_bone">Bone mass</string>
    <string name="label_age">Age</string>
    <string name="label_smartUserAssign">Smart User assignment</string>
    <plurals name="label_days">
        <item quantity="one">day %d</item>
        <item quantity="other">days %d</item>
    </plurals>
    <string name="label_last_week">Average past week</string>
    <string name="label_last_month">Average past month</string>
    <string name="label_weight_difference">Weight difference</string>
    <string name="label_goal_date_is">Goal date:</string>
    <string name="label_days_left">Days left</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_user_name">Name</string>
    <string name="label_height">Height</string>
    <string name="label_scale_unit">Scale unit</string>
    <string name="label_gender">Gender</string>
    <string name="label_assisted_weighing">Assisted weighing</string>
    <string name="label_amputation">Amputation</string>
    <string name="label_amputation_left">Amputation left</string>
    <string name="label_amputation_right">Amputation right</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_goal_weight">Goal weight</string>
    <string name="label_goal_date">Goal date</string>
    <string name="label_title_user">user</string>
    <string name="label_title_last_measurement">last measurement</string>
    <string name="label_title_goal">Goal</string>
    <string name="label_import">Import</string>
    <string name="label_export">Export</string>
    <string name="label_delete_all">Delete all</string>
    <string name="error_value_required">Value required</string>
    <string name="error_value_range">Value out of range</string>
    <string name="error_exporting">Could not export</string>
    <string name="error_importing">Could not import</string>
    <string name="error_user_name_required">Name required</string>
    <string name="error_height_required">Height required</string>
    <string name="error_initial_weight_required">Initial weight required</string>
    <string name="error_goal_weight_required">Goal weight required</string>
    <string name="info_data_deleted">Entry deleted</string>
    <string name="info_data_all_deleted">All entries deleted</string>
    <string name="info_data_exported">Exported to</string>
    <string name="info_data_imported">Imported from</string>
    <string name="info_enter_value_in">Value in</string>
    <string name="info_enter_comment">Optional comment</string>
    <string name="info_is_visible">is visible</string>
    <string name="info_is_not_visible">is not visible</string>
    <string name="info_is_enable">enabled</string>
    <string name="info_is_not_enable">disabled</string>
    <string name="info_is_not_available">not available</string>
    <string name="info_assisted_weighing_no_reference_measurements">Reference user has no measurements</string>
    <string name="info_assisted_weighing_old_reference_measurement">Warning: last reference measurement is older than a day</string>
    <string name="info_assisted_weighing_no_reference_user">No reference user available, please create one</string>
    <string name="info_assisted_weighing_choose_reference_user">Choose the reference user which the weight is subtracted</string>
    <string name="info_scale_low_battery">Low battery level (%d%%), please recharge or replace scale batteries</string>
    <string name="info_bluetooth_try_connection">Connecting to:</string>
    <string name="info_bluetooth_connection_lost">Bluetooth connection lost</string>
    <string name="info_bluetooth_no_device">No Bluetooth device found</string>
    <string name="info_bluetooth_no_device_retrying">Could not establish connection, retrying…</string>
    <string name="info_bluetooth_no_device_set">Select a Bluetooth device</string>
    <string name="info_bluetooth_connection_successful">Connected</string>
    <string name="info_bluetooth_init">Initialize Bluetooth device</string>
    <string name="info_bluetooth_connection_error">Unexpected Bluetooth error</string>
    <string name="info_bluetooth_connection_error_scale_offline">Could not connect to scale, please ensure it is on.</string>
    <string name="info_bluetooth_connection_disconnected">Bluetooth connection closed</string>
    <string name="info_new_data_added">%1$.2f%2$s [%3$s] to %4$s added</string>
    <string name="info_new_data_duplicated">measurement with the same date and time already exist</string>
    <string name="info_enter_user_name">Your name</string>
    <string name="info_no_selected_user">No user exists. Please create one in the settings.</string>
    <string name="info_no_evaluation_available">Could not evaluate the value</string>
    <string name="question_really_delete">Delete entry?</string>
    <string name="question_really_delete_all">Delete all entries for all users?</string>
    <string name="question_really_delete_user">Delete user?</string>
    <string name="label_bluetooth_title">Bluetooth</string>
    <string name="label_bluetooth_enable">Connect to scale on startup</string>
    <string name="label_mergeWithLastMeasurement">Merge with last measurement</string>
    <string name="label_bluetooth_searching">Searching for your Bluetooth scale</string>
    <string name="label_bluetooth_searching_finished">Search finished</string>
    <string name="label_enable_legend">Graph legend</string>
    <string name="label_enable_yaxis">Y-axis</string>
    <string name="label_enable_labels">Data label</string>
    <string name="label_enable_points">Data point</string>
    <string name="label_delete_confirmation">Delete confirmation</string>
    <string name="label_category_measurement_database">Measurement database</string>
    <string name="label_maintainer">Maintainer</string>
    <string name="label_website">Website</string>
    <string name="label_license">License</string>
    <string name="label_automatic">auto</string>
    <string name="label_theme">Theme</string>
    <string name="label_reminder">Reminder</string>
    <string name="label_reminder_weekdays">Days</string>
    <string name="label_reminder_time">Time</string>
    <string name="label_reminder_notify_text">Notification text</string>
    <string name="default_value_reminder_notify_text">Time to weigh in</string>
    <string name="info_on_date">on</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="label_bt_device_no_support">device not supported</string>
    <string name="label_exportBackup">Export backup</string>
    <string name="label_importBackup">Import backup</string>
    <string name="label_backup">Backup</string>
    <string name="label_export_dir">Export dir</string>
    <string name="label_not_found">not found</string>
    <string name="label_ignoreOutOfRange">Ignore out of range data</string>
    <string name="label_initial_weight">Initial weight</string>
    <string name="label_goal_line">Goal line</string>
    <string name="label_trend_line">Trendline</string>
    <string name="label_prediction">Prediction</string>
    <string name="label_trend">Trend</string>
    <string name="label_help">Help</string>
    <string name="label_feedback_message_enjoying">Enjoying openScale?</string>
    <string name="label_feedback_message_rate_app">How about a rating on Google Play or GitHub?</string>
    <string name="label_feedback_message_issue">Would you like to provide some feedback?</string>
    <string name="label_feedback_message_yes">Yes</string>
    <string name="label_feedback_message_no">Not really</string>
    <string name="label_feedback_message_positive">OK</string>
    <string name="label_feedback_message_negative">No, thanks</string>
    <string name="error_max_scale_users">Max. number of concurrent scale users reached</string>
    <string name="info_step_on_scale_for_reference">Please step barefoot on the scale for reference measurements</string>
    <string name="info_step_on_scale">Please step barefoot on the scale</string>
    <string name="info_measuring">Measuring weight: %.2f</string>
    <string name="trisa_scale_not_paired">This scale has not been paired!\n\nHold the button on the bottom of the scale to switch it to pairing mode, and then reconnect to retrieve the device password.</string>
    <string name="trisa_scale_pairing_succeeded">Pairing succeeded!\n\nReconnect to retrieve measurement data.</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\n\nPlease create a new issue including the error details on\nhttps://github.com/oliexdev/openScale/issues</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="title_server_url">Server url</string>
    <string name="title_server_port">Server port</string>
    <string name="title_measurement">Measurement</string>
    <string name="title_database">Database</string>
    <string name="title_retention_policy">Retention Policy</string>
    <string name="title_use_authentication">Use authentication</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
</resources>